<resources>
    <string name="app_name">SMG</string>
    <string name="welcome">WELCOME</string>
    <string name="p">New</string>
    <string name="logo">logo</string>
    <string name="user_image">User Image</string>
    <string name="phone_number">Mobile No.</string>
    <string name="mobile_number_pay">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="not_a_member">If you Do’t  have An account ?</string>
    <string name="register_here">Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="now">Now</string>
    <string name="user_name">Name</string>
    <string name="user_name_cap">Username</string>
    <string name="email_address">Email address</string>
    <string name="mPin">M-PIN</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="_0">0</string>
    <string name="resend_otp_in">Resend OTP in:</string>
    <string name="otp_send_to">OTP send to:</string>
    <string name="go">Go</string>
    <string name="enter_verification_code">Enter OTP Verification Code</string>
    <string name="resend">Resend</string>
    <string name="forgot_password_full">Forgot Password</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="title_activity_new_home">NewHome</string>
    <string name="_20">+20</string>
    <string name="market">Market</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="images">Image</string>
    <string name="dummy_time">11:20 AM</string>
    <string name="dummy_stauts">Market Open</string>
    <string name="rupee_symbol"> \u20B9 </string>
    <string name="dummy_date">2021/20/05</string>
    <string name="dummy_number">0000000000</string>

    <string name="galidelawar">Gali Desawar</string>
    <string name="trans_id">sfvs154</string>
    <string name="auto_approved">Auto-Approved</string>
    <string name="bid_sucess_msg">Bid Successfully Placed</string>
    <string name="paymentMode">Choose payment option</string>
    <string name="bid_attention_note">Once you placed a bid, it will not be cancelled in any situation.</string>
    <string name="transfer_point_note">Are You Sure</string>
    <string name="payment_to">Payment to</string>
    <string name="discription">Discription</string>
    <string name="dummy_full_date">12 jan 2021 11:30pm</string>
    <string name="dummy_email">xyz@gmail.com</string>
    <string name="wallet">Wallet</string>
    <string name="add_points">Add Points</string>
    <string name="withdraw">Withdraw</string>
    <string name="transfer">Transfer</string>
    <string name="phonepe">PhonePe</string>
    <string name="paytm">Paytm</string>
    <string name="google_pay">Google Pay</string>
    <string name="bid_history">Bid History</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="submit">Submit</string>
    <string name="contact_us">Contact Us</string>
    <string name="chat_us">Chat Us:</string>
    <string name="email_us">Email Us:</string>
    <string name="call_us">Call Us:</string>


    <string name="game_rate">Game Rate</string>
    <string name="back">Back</string>
    <string name="close_application">Close Application</string>

    <string name="other">Other</string>
    <string name="user_profile">My Profile</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="current_point">Current point: </string>
    <string name="mobile_number">Mobile Number</string>
    <string name="points">Points</string>
    <string name="enter_point">Enter Point</string>
    <string name="withdraw_points">Withdraw points</string>
    <string name="withdraw_number">Withdraw Number</string>
    <string name="open_digit">Open Digit:</string>
    <string name="close_pana">Close Pana:</string>
    <string name="select_method">Select Method</string>
    <string name="withdraw_method">Withdraw Method</string>
    <string name="win_history">Win History</string>
    <string name="history_text">History</string>
    <string name="start_date">Start Date</string>
    <string name="select_date">Select Date</string>
    <string name="to_date">To Date</string>
    <string name="play_again">Play Again</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="continue_text">Continue</string>
    <string name="proceed">Proceed</string>
    <string name="company_name">Company Name</string>
    <string name="xxx_xx_xxx">XXX-XX-XXX</string>
    <string name="left_digit">Left Digit</string>
    <string name="right_digit">Right Digit</string>
    <string name="jodi_digit">Jodi Digit</string>
    <string name="xxx_x">XXX-XX-X</string>
    <string name="enter_digit">Enter Digit</string>
    <string name="choose_date">Choose Date</string>
    <string name="amount_500">Amount: 500</string>
    <string name="payment_method_google_pay">Payment Method: Google Pay</string>
    <string name="approved">Approved</string>
    <string name="pointssing">Points:</string>
    <string name="available_point">Available point</string>
    <string name="activity">Activity</string>
    <string name="current_date">Current Date</string>
    <string name="choose_session">Choose Session</string>
    <string name="transfer_points">Transfer Points</string>
    <string name="payment_receipt">Payment Receipt</string>
    <string name="starline_game">Starline Game</string>
    <string name="single_digit">Single Digit</string>
    <string name="single_panna">Single Panna</string>
    <string name="double_panna">Double Panna</string>
    <string name="triple_panna">Triple Panna</string>
    <string name="call">Call</string>
    <string name="add_point">ADD Point</string>
    <string name="share">Share</string>
    <string name="rating">Rating</string>
    <string name="logout">Logout</string>
    <string name="play_starline">Play Starline Game</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_transactions">My Transactions</string>
    <string name="watch_it_on_youtube">watch it on youtube</string>
    <string name="how_to_play">How To Play</string>
    <string name="update">Update</string>
    <string name="not_now">Not Now</string>
    <string name="already_registered">Already Account : Login here</string>
    <string name="sign_in">Login Here</string>
    <string name="to_add_update_withdraw">To Add/Update withdraw numbers, you need to verify your mobile number using OTP</string>
    <string name="charts">Charts</string>
    <string name="d">D</string>
    <string name="enter_4_digit_security_code">Enter 4 Digit Security Code</string>
    <string name="game_chart">Game Chart</string>
    <string name="play_game">Play Game</string>
    <string name="play_gali_desawar">Play Gali Desawar</string>
    <string name="shree_ganesh">SMG</string>
    <string name="starline_matka">SMG</string>
    <string name="wallet_icon">Wallet Icon</string>
    <string name="welcome_to">Welcome to</string>
    <string name="app_title">SMG</string>
    <string name="back_button_text">back</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="notification">Notification</string>

</resources>
