<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0dp"
    app:cardElevation="1dp"
    app:cardBackgroundColor="@color/primarydark"
    android:layout_margin="1dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/senderimage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:background="@drawable/circle"
            android:contentDescription="@string/images"
            android:padding="15dp"
            android:translationZ="1dp"
            app:srcCompat="@drawable/ic_wallet" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/senderimage"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:visibility="gone"
                        android:id="@+id/sendto"
                        android:layout_width="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/primary"
                        android:fontFamily="@font/roboto_medium"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_to" />

                    <TextView
                        android:fontFamily="@font/kohsantepheap_bold"
                        android:id="@+id/amtdiscription"
                        android:layout_width="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:text="@string/discription" />
                    <TextView
                        android:fontFamily="@font/poppins_semibold"
                        android:id="@+id/datetimetxt"
                        android:layout_width="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_full_date"
                        tools:ignore="SmallSp" />
                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:fontFamily="@font/roboto_medium"
                android:gravity="end"
                android:layout_marginEnd="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:id="@+id/payemt_amount"
                android:textColor="@color/sky_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20" />

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>