<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10sdp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_verification_code"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/otpText"
            android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="xxxx"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/_0"
        app:cursorVisible="true"
        app:hint="@string/_0"
        app:inputType="number"
        app:password="false"
        app:pinHeight="40dp"
        app:pinLength="4"
        app:pinWidth="40dp">

        <requestFocus />
    </com.goodiebag.pinview.Pinview>


    <RelativeLayout
        android:id="@+id/top_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/resendOTPTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp_in"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/OtpTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/resendOTPTV"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_send_to"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/OtpNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottom_layer"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/resend"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Otp_Go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resendOTP"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_design_one"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>