<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/primarydark"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/homerecycle_mainlayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/single_addpoint_refreno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/trans_id"
                android:textColor="@color/yellowColorn"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center">


            <TextView
                android:id="@+id/single_addpoint_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box_frame_offwhite"
                android:gravity="start"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/_20"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/single_addpoint_pointnote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/single_addpoint_amount"
                android:gravity="start"
                android:text="@string/transfer_point_note"
                android:textColor="@color/sky_blue"
                android:textSize="14sp" />

            <TextView
                android:fontFamily="@font/rubik_semibold"
                android:id="@+id/single_addpoint_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/single_addpoint_pointnote"
                android:gravity="start"
                android:text="@string/dummy_date"
                android:textColor="@color/white"
                android:textSize="13sp" />
            </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/single_addpoint_statustxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/auto_approved"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold">

            </TextView>


        </LinearLayout>
<View
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@color/white_off"
    android:layout_gravity="end"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>