<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".login.OtpVerifyActivity">

    <TextView
        android:id="@+id/withdrawMethodText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:background="#a2d5c6"
        android:padding="5dp"
        android:text="@string/to_add_update_withdraw"
        android:textColor="@color/red"
        android:fontFamily="@font/rubik_semibold"
        android:textSize="12sp"
        android:visibility="gone" />


    <ImageView
        android:src="@drawable/ic_logo1"
        android:id="@+id/imageLogo"
        android:layout_width="210dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:textSize="24sp"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/rubik_semibold"
            android:text="@string/enter_verification_code"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/_0"
            app:cursorVisible="true"
            app:hint="@string/_0"
            app:inputType="number"
            app:password="false"
            app:pinHeight="40dp"
            app:pinLength="4"
            app:pinWidth="35dp">
            <requestFocus />
        </com.goodiebag.pinview.Pinview>


        <TextView
            android:id="@+id/otpNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pinview"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/rubik_semibold"
            android:padding="5dp"
            android:text="XXXX"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/top_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otpNo"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/resendOTPTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_semibold"
                android:text="@string/resend_otp_in"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/OtpTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/resendOTPTV"
                android:fontFamily="@font/rubik_semibold"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/bottom_layer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_layer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_semibold"
                android:text="@string/otp_send_to"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/OtpNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/rubik_semibold"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bottom_layer"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_semibold"
            android:text="@string/resend"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Otp_Go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/resendOTP"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/primary_button_design"
            android:fontFamily="@font/rubik_semibold"
            android:text="@string/go"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/progressbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:translationZ="40dp"
        android:visibility="gone">

        <include layout="@layout/custom_progress_bar" />
    </RelativeLayout>

</RelativeLayout>
