<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/primarydark"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:id="@+id/fulllayoutclick"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp">

            <TextView
                android:paddingVertical="3dp"
                android:paddingHorizontal="10dp"
                android:id="@+id/withdraw_request_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_design_one"
                android:fontFamily="@font/kohsantepheap_bold"
                android:paddingEnd="5dp"
                android:text="@string/dummy_number"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:paddingVertical="3dp"
                android:paddingHorizontal="10dp"
                android:id="@+id/withdraw_request_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:background="@drawable/box_frame_offwhite"
                android:fontFamily="@font/roboto_medium"
                android:gravity="end"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/amount_500"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/withdraw_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/rubik_semibold"
                android:layout_toStartOf="@+id/withdraw_payment_status"
                android:text="@string/payment_method_google_pay"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <TextView
                android:paddingVertical="3dp"
                android:paddingHorizontal="10dp"
                android:id="@+id/withdraw_payment_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:background="@drawable/box_frame_offwhite"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/approved"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/sky_blue"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:fontFamily="@font/poppins_semibold"
            android:id="@+id/withdraw_payment_remark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_number"
            android:textColor="@color/yellowColorn"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/withdraw_payment_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_full_date"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:background="@color/primary" />


    </LinearLayout>

</androidx.cardview.widget.CardView>